# rustfetch

./: .gitattributes  Cargo.toml  LICENSE  README.md
ascii/: adelie.txt
src/: config.rs  main.rs
src/modules/: features.rs  hardware.rs  mod.rs  software.rs
