[package]
name = "rustfetch"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
home = "0.5"
viuer = "0.7"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zbus = { version = "4.4", features = ["blocking"] }
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
